# cindergrace_netman

./: .gitignore  .ki-faq.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  start.sh
.github/workflows/: test.yml
docs/: USER_GUIDE.md  USER_GUIDE_de.md  USER_GUIDE_en.md
src/cindergrace_netman/: __init__.py  checks.py  cli.py  config.py  net.py  state.py  tray.py  ui.py
src/cindergrace_netman/translations/: ui.yaml
tests/: test_checks.py  test_cindergrace_netman.py  test_cli.py  test_net.py  test_state.py  test_tray.py  test_ui.py
